--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,7 +128,7 @@
     left: 0;
     width: 100%;
     height:60px;
-    background-color: #b80f0a;
+    background-color: #006400;
     color: #fff;
     padding: 10px 0;
     z-index: 1010;
@@ -176,7 +176,7 @@
     left: -700;
     height: 100%; /* Adjusted for the height of the header */
     width: auto;
-    background-color: #b80f0a;
+    background-color: #006400;
     color: #fff;
     transition: transform 0.1s ease;
     overflow: auto;
@@ -231,7 +231,7 @@
     100% { opacity: 1; }
   }
   h2, h3, h4 {
-    color: #b80f0a;
+    color: #006400;
     border-bottom: 2px solid #ccc;
     padding-bottom: 10px;
     margin-bottom: 20px;
@@ -652,7 +652,7 @@ ad by adsterra    <hr />
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background-color: #b80f0a;
+      background-color: #006400;
       color: #ffffff;
       padding: 10px;
       border-radius: 40%;
@@ -666,7 +666,7 @@ ad by adsterra    <hr />
     }
 
     .back-to-top:hover {
-      background-color: #b80f0a;
+      background-color: #d14000;
     }
 
     @media screen and (max-width: 768px) {
@@ -699,7 +699,12 @@ ad by adsterra    <hr />
     });
   </script>
 
-
+<script type="text/javascript">
+   var uid = '342117';
+   var wid = '699120';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
 
 
 <!-- tabunder + url rotator -->
