--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -406,11 +406,11 @@
 <style>
   .overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
+    bottom: 10px;
+    left: 10px;
+    width: 340px;
+    height: 50px;
+    background: rgba(0, 0, 0, 0.0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -418,25 +418,26 @@
   }
   .ad-content {
     position: relative;
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 90%;
-    max-height: 100%;
+    background: #00000000;
+    padding: 0px;
+    border-radius: 5px;
+    max-width: 100%;
+    height: 50px;
+    overflow: auto;
     text-align: center;
   }
   .close-btn {
     position: absolute;
-    top: 23px;
+    top: 0px;
     right: 10px;
-    background: #ff0000;
-    color: #fff;
+    background: #000000;
+    color: #ff0000;
     border: none;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 30px;
   }
 </style>
@@ -446,8 +447,19 @@
 <div class="overlay" id="interstitialAd">
   <div class="ad-content">
     <button class="close-btn" onclick="closeAd()">X</button>
+    
+
+ <script type="text/javascript">
+	atOptions = {
+		'key' : '8785755b5fbf6100fda53d14feba27dc',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/8785755b5fbf6100fda53d14feba27dc/invoke.js"></script>
     <br />
-ad by adsterra    <hr />
 	        <link rel="stylesheet" href="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.css" type="text/css" />
 <script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js"></script><center>
 <video id='my-videoo' controls autoplay loop muted style="max-width:100%; height:auto;" >
@@ -559,17 +571,7 @@ ad by adsterra    <hr />
 <script type="text/javascript" src="//evendisciplineseedlings.com/05e71e8fcd63fef26f82e71c68475ec9/invoke.js"></script>
 <br />
  <script type='text/javascript' src='//evendisciplineseedlings.com/5e/8e/5f/5e8e5f803f5b46f8c5ad3af8c3cd2089.js'></script>
- <script type="text/javascript">
-	atOptions = {
-		'key' : '8785755b5fbf6100fda53d14feba27dc',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//evendisciplineseedlings.com/8785755b5fbf6100fda53d14feba27dc/invoke.js"></script>
-    
+
     
     <script type="text/javascript">
 	atOptions = {
