--- a/_layouts/default1.html
+++ b/_layouts/default1.html
@@ -5,8 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
 <link rel="icon" href="{{ site.url }}/assets/images/logo.png"/>
+<meta name="msvalidate.01" content="D6151F5DC8690B73D0BF930E3F286554" />
+<meta name="yandex-verification" content="81541d3e367b626f" />	
 
-
+	
 {% seo %}
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
@@ -245,6 +247,27 @@
 </head>
 <body>
 
+	<br /><br /><br />
+	<div class="col-12 mb-4">
+      <b> Featurer Posts </b>
+		<hr />
+        <div class="row">
+          {% for post in site.categories.flowering limit: 999 %}
+          <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
+            <div class="card">
+           <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
+           </a>
+              <div class="card-body">
+                <h5 class="card-title" style="max-width:100%;">{{ post.title }}</h5>
+                <a href="{{ post.url }}" class="btn btn-primary">Read More
+                        </a>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+	
 <div class="header">
   <div class="container"><b>
 <a href="/" style="font-size: 24px; color:#fff;" >
@@ -305,7 +328,6 @@
 </script>
 
 
-
 	
 <footer class="footer">
     <div class="container">
@@ -350,11 +372,11 @@
 <style>
   .overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
+    bottom: 10px;
+    left: 10px;
+    width: 340px;
+    height: 50px;
+    background: rgba(0, 0, 0, 0.0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -362,25 +384,26 @@
   }
   .ad-content {
     position: relative;
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 90%;
-    max-height: 100%;
+    background: #00000000;
+    padding: 0px;
+    border-radius: 5px;
+    max-width: 100%;
+    height: 50px;
+    overflow: auto;
     text-align: center;
   }
   .close-btn {
     position: absolute;
-    top: 23px;
+    top: 0px;
     right: 10px;
-    background: #ff0000;
-    color: #fff;
+    background: #000000;
+    color: #ff0000;
     border: none;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 30px;
   }
 </style>
@@ -390,8 +413,19 @@
 <div class="overlay" id="interstitialAd">
   <div class="ad-content">
     <button class="close-btn" onclick="closeAd()">X</button>
+    
+
+ <script type="text/javascript">
+	atOptions = {
+		'key' : '8785755b5fbf6100fda53d14feba27dc',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/8785755b5fbf6100fda53d14feba27dc/invoke.js"></script>
     <br />
-ad by adsterra    <hr />
 	        <link rel="stylesheet" href="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.css" type="text/css" />
 <script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js"></script><center>
 <video id='my-videoo' controls autoplay loop muted style="max-width:100%; height:auto;" >
@@ -503,16 +537,7 @@ ad by adsterra    <hr />
 <script type="text/javascript" src="//evendisciplineseedlings.com/05e71e8fcd63fef26f82e71c68475ec9/invoke.js"></script>
 <br />
  <script type='text/javascript' src='//evendisciplineseedlings.com/5e/8e/5f/5e8e5f803f5b46f8c5ad3af8c3cd2089.js'></script>
- <script type="text/javascript">
-	atOptions = {
-		'key' : '8785755b5fbf6100fda53d14feba27dc',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//evendisciplineseedlings.com/8785755b5fbf6100fda53d14feba27dc/invoke.js"></script>
+
     
     <script type="text/javascript">
 	atOptions = {
@@ -569,7 +594,7 @@ ad by adsterra    <hr />
 	};
 </script>
 <script type="text/javascript" src="//scheduleginnarcotic.com/497321fec36c580006e1e8d580dd2798/invoke.js"></script>
-    
+	  
   </div>
 </div>
 
