--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -508,7 +508,10 @@
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//scheduleginnarcotic.com/7c3b97aad1824c7440cf934a58fa68a3/invoke.js"></script><script type='text/javascript' src='//scheduleginnarcotic.com/07/29/de/0729de45fd81c90595ace73217c31510.js'></script><script type="text/javascript">
+<script type="text/javascript" src="//scheduleginnarcotic.com/7c3b97aad1824c7440cf934a58fa68a3/invoke.js"></script>
+
+
+<script type="text/javascript">
 	atOptions = {
 		'key' : '3e944ec183e6b74a7c6b5e62802ef44d',
 		'format' : 'iframe',
@@ -701,5 +704,4 @@
 	
 </body>
 </html>
-
 
