--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -10,13 +10,13 @@ permalink: "/categories.html"
 
 
 <h2>   
-email marketing
+Flowering Ornamental Plants
 </h2>
 
 
 <div class="col-12 mb-4">
                <div class="row">
-          {% for post in site.categories.email-marketing limit: 3 %}
+          {% for post in site.categories.flowering limit: 3 %}
           <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
             <div class="card">
            <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
@@ -145,10 +145,10 @@ email marketing
     );
 </script>
 
-<h2>ppc advertising</h2>
+<h2>Foliage Ornamental Plants</h2>
 <div class="col-12 mb-4">
                <div class="row">
-          {% for post in site.categories.ppc limit: 3 %}
+          {% for post in site.categories.foliage limit: 3 %}
           <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
             <div class="card">
            <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
@@ -165,11 +165,11 @@ email marketing
       </div>
 
 <h2>
-affiliate Marketing  
+Hanging Ornamental Plants  
 </h2>
 <div class="col-12 mb-4">
                <div class="row">
-          {% for post in site.categories.affiliate-marketing limit: 3 %}
+          {% for post in site.categories.hanging limit: 3 %}
           <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
             <div class="card">
            <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
