--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -13,13 +13,13 @@ permalink: "/tags.html"
 
 
 <h2>   
-Flowering Ornamental Plants
+Miniature or Bonsai Ornamental Plants
 </h2>
 
 
 <div class="col-12 mb-4">
                <div class="row">
-          {% for post in site.categories.flowering limit: 3 %}
+          {% for post in site.categories.bonsai limit: 3 %}
           <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
             <div class="card">
            <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
@@ -148,10 +148,10 @@ Flowering Ornamental Plants
     );
 </script>
 
-<h2>Foliage Ornamental Plants</h2>
+<h2>Aquatic Ornamental Plants</h2>
 <div class="col-12 mb-4">
                <div class="row">
-          {% for post in site.categories.foliage limit: 3 %}
+          {% for post in site.categories.aquatic limit: 3 %}
           <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
             <div class="card">
            <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
@@ -168,11 +168,11 @@ Flowering Ornamental Plants
       </div>
 
 <h2>
-Hanging Ornamental Plants  
+Toxic Ornamental Plants  
 </h2>
 <div class="col-12 mb-4">
                <div class="row">
-          {% for post in site.categories.hanging limit: 3 %}
+          {% for post in site.categories.toxic limit: 3 %}
           <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
             <div class="card">
            <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
