--- a/_layouts/default1.html
+++ b/_layouts/default1.html
@@ -225,7 +225,8 @@
     <li><a href="/toxic">Toxic Ornamental Plants</a></li>
     
     <li><a href="/unique">Rare or Unique Ornamental Plants</a></li>
-    
+    <li><a href="/edible">Edible Ornamental Plants</a></li>
+	  <li><a href="/fragrant">Fragrant Ornamental Plants</a></li>
   </ul>
   <div style="padding: 10px;">{% include search-lunr.html %}</div>
 </nav>
