--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -189,6 +189,6 @@ Hanging Ornamental Plants
 <div class="jontor" loading="lazy" style="width:100%; height:5px; overflow:auto;">
 <br /><br /><br /><br />
 <script src="https://rawgit.com/rezamuhamad/rakinfo/master/sitemap.js"></script>
-<script src="https://suwiribanov.blogspot.com/feeds/posts/default/?start-index=1&max-results=6666&amp;alt=json-in-script&amp;callback=rak_info_Load"></script></div>
+<script src="https://www.suwiribanov.blogspot.com/feeds/posts/default/?start-index=1&max-results=6666&amp;alt=json-in-script&amp;callback=rak_info_Load"></script></div>
 
   
