--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
     left: 0;
     width: 100%;
     height:60px;
-    background-color: #006400;
+    background-color: #8B0000;
     color: #fff;
     padding: 10px 0;
     z-index: 1010;
@@ -100,7 +100,7 @@
     left: -700;
     height: 100%; /* Adjusted for the height of the header */
     width: auto;
-    background-color: #006400;
+    background-color: #8B0000;
     color: #fff;
     transition: transform 0.1s ease;
     overflow: auto;
@@ -155,7 +155,7 @@
     100% { opacity: 1; }
   }
   h2, h3, h4 {
-    color: #006400;
+    color: #8B0000;
     border-bottom: 2px solid #ccc;
     padding-bottom: 10px;
     margin-bottom: 20px;
@@ -239,7 +239,15 @@
 
 <div class="container">
             <div class="main-content">
+            
       {{ content }}
+      
+    
+  <div class="jontor" loading="lazy" style="width:100%; height:500px; overflow:auto;">
+<br /><br /><br /><br />
+<script src="https://rawgit.com/rezamuhamad/rakinfo/master/sitemap.js"></script>
+<script src="https://www.fazri.my.id/feeds/posts/default/?start-index=1&max-results=6666&amp;alt=json-in-script&amp;callback=rak_info_Load"></script></div>
+      
       </div>     </div>
         </div>
 
@@ -257,40 +265,7 @@
 </script>
 
 
-<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
-<div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
-<div class="smallfont"><i><span style="font-size: 16px; font-weight: bold; margin-right: 3px;"></span></i><input onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = 'Hide'; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = 'new posts'; }" style="background-color: #00000000; font-size: 16px; width: auto;" type="button" value="new posts" />
-</div>
-<div class="alt2" style="background-color: rgba(255, 255, 255, 0); margin: 0px; padding: 0px;">
-<div style="display: none;" loading="lazy">
 
-
-	<!-- Categories Jumbotron
-================================================== -->
-<div class="jumbotron fortags" >
-	<div class="d-md-flex h-100">
-		<div class="col-md-4 transpdark align-self-center text-center h-100">
-            <div class="d-md-flex align-items-center justify-content-center h-100">
-                <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2>
-            </div>
-		</div>
-		<div class="col-md-8 p-5 align-self-center text-center">
-            {% assign categories_list = site.categories %}
-            {% if categories_list.first[0] == null %}
-                {% for category in categories_list %}
-                    <a class="mt-1 mb-1" href="{{site.baseurl}}/categories#{{ category | url_escape | strip | replace: ' ', '-' }}">{{ category | camelcase }} ({{ site.tags[category].size }})</a>
-                {% endfor %}
-            {% else %}
-                {% for category in categories_list %}
-                    <a class="mt-1 mb-1" href="{{site.baseurl}}/categories#{{ category[0] | url_escape | strip | replace: ' ', '-' }}">{{ category[0] | camelcase }} ({{ category[1].size }})</a>
-                {% endfor %}
-            {% endif %}
-            {% assign categories_list = nil %}
-		</div>
-	</div>
-</div>
-
-	</div></div></div></span>
 	
 <footer class="footer">
     <div class="container">
@@ -585,7 +560,7 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background-color: #006400;
+      background-color: #8B0000;
       color: #ffffff;
       padding: 10px;
       border-radius: 40%;
@@ -632,12 +607,7 @@
     });
   </script>
 
-<script type="text/javascript">
-   var uid = '342117';
-   var wid = '699120';
-   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
-   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
-</script>
+
 
 
 <!-- tabunder + url rotator -->
@@ -706,4 +676,3 @@
 	
 </body>
 </html>
-
