--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,13 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
+
+
+<meta name="yandex-verification" content="69c5f8fb626ee02b" />
+	
+<meta name="msvalidate.01" content="D6151F5DC8690B73D0BF930E3F286554" />
+	
+	
 <link rel="icon" href="{{ site.url }}/assets/images/logo.png"/>
 <meta name="msvalidate.01" content="D6151F5DC8690B73D0BF930E3F286554" />
 <meta name="yandex-verification" content="81541d3e367b626f" />	
